--- a/AWAStudios/AWAStudios.html
+++ b/AWAStudios/AWAStudios.html
@@ -28,6 +28,15 @@
 <div class="mySlides" style="text-align: center;"><img src="AWAStudios3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AWAStudios4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AWAStudios8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AWAStudios20.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -41,11 +50,20 @@ Our hope, dream and dead reckoning, is that a network of graphic fiction busines
 </p><p>
 Titles
 </p><p>
+<li><a href="AWAStudios12.jpg">American Ronin</a> (2020)
 <li><a href="AWAStudios9.jpg">Archangel 8</a> (2019)
 <li><a href="AWAStudios11.jpg">Bad Mother</a> (2019)
 <li><a href="AWAStudios10.jpg">Byte Sized</a> (2019)
+<li><a href="AWAStudios17.jpg">Devil's Highway</a> (2020)
+<li><a href="AWAStudios13.jpg">E-Ratic</a> (2020)
+<li><a href="AWAStudios19.jpg">ET ER</a> (2020)
+<li><a href="AWAStudios14.jpg">Grendel Kentucky</a> (2020)
 <li><a href="AWAStudios7.jpg">Hotell</a> (2019)
+<li><a href="AWAStudios16.jpg">Mann's World</a> (2019)
+<li><a href="AWAStudios20.jpg">Moths</a> (2020)
+<li><a href="AWAStudios18.jpg">Old Haunts</a> (2019)
 <li><a href="AWAStudios5.jpg">Red Border</a> (2019)
+<li><a href="AWAStudios15.jpg">Redemption</a> (2019)
 <li><a href="AWAStudios1.jpg">Resistance</a> (2019)
 <li><a href="AWAStudios8.jpg">Year Zero</a> (2020)
 
