--- a/Moonstone/Moonstone.html
+++ b/Moonstone/Moonstone.html
@@ -127,10 +127,13 @@
 <div class="mySlides" style="text-align: center;"><img src="Moonstone107.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Moonstone108.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Moonstone109.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonstone110.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+Publishing since 1995 <a href="http://www.moonstonebooks.com">Moonstonebooks.com</a>. Moonstone is a fun little company who works ridiculously hard to bring escapist entertainment to the masses, whether it be in the form of comic books, graphic novels, trade paperbacks, novels or short story anthologies. We consider ourselves the home for wayward thriller-adventure heroes like Kolchak the Night Stalker, Buckaroo Banzai, Captain Action, The Green Hornet, The Avenger, The Spider, The Saint, The Justice Machine, Domino Lady, Zorro, The Phantom, Operator 5, G-8, The Green Lama, Honey West, Sherlock Holmes, Airboy, Zeroids, Secret Agent X, The Phantom Detective, and so many more.
 </p><p>
 Titles
 </p><p>
@@ -141,8 +144,8 @@ Titles
 <li><a href="Moonstone5.jpg">Arianne</a> (1996)
 <li><a href="Moonstone6.jpg">Bedtime Stories for Impressionable Children</a> (2010)
 <li><a href="Moonstone7.jpg">Belle Starr: Queen of Bandits</a> (2005)
-<li><a href="Moonstone8.jpg">The Black Bat</a> (2011)
-<li><a href="Moonstone9.jpg">The Blackest Terror</a> (2011)
+<li><a href="Moonstone8.jpg">Black Bat</a> (2011)
+<li><a href="Moonstone9.jpg">Blackest Terror</a> (2011)
 <li><a href="Moonstone10.jpg">Blackshirt</a> (2004)
 <li><a href="Moonstone11.jpg">Bloodline</a> (2004)
 <li><a href="Moonstone12.jpg">Buckaroo Banzai Big Size</a> (2009)
@@ -160,15 +163,15 @@ Titles
 <li><a href="Moonstone24.jpg">Captain Action Season Two</a> (2010)
 <li><a href="Moonstone25.jpg">Captain Action Winter Special</a> (2011)
 <li><a href="Moonstone26.jpg">Captain Action: First Mission, Last Day</a> (2008)
-<li><a href="Moonstone27.jpg">The Captain Midnight Special</a> (2013)
-<li><a href="Moonstone28.jpg">The Cisco Kid vs. Wyatt Earp</a> (2008)
+<li><a href="Moonstone27.jpg">Captain Midnight Special</a> (2013)
+<li><a href="Moonstone28.jpg">Cisco Kid vs. Wyatt Earp</a> (2008)
 <li><a href="Moonstone29.jpg">Domino Lady</a> (2009)
 <li><a href="Moonstone30.jpg">Domino Lady's Threesome</a> (2012)
 <li><a href="Moonstone31.jpg">Domino Lady/Sherlock Holmes</a> (2013)
 <li><a href="Moonstone32.jpg">Domino Lady: Noir</a> (2010)
 <li><a href="Moonstone33.jpg">Guns of the Black Bat</a> (2016)
 <li><a href="Moonstone34.jpg">Hack/Slash Meets Zombies vs Cheerleaders</a> (2011)
-<li><a href="Moonstone35.jpg">The Heap</a> (2011)
+<li><a href="Moonstone35.jpg">Heap</a> (2011)
 <li><a href="Moonstone36.jpg">Honey West</a> (2010)
 <li><a href="Moonstone37.jpg">Honey West &amp; Kolchak: High Heels &amp; Hedonism</a> (2013)
 <li><a href="Moonstone38.jpg">Honey West &amp; T.H.E. Cat</a> (2013)
@@ -180,7 +183,7 @@ Titles
 <li><a href="Moonstone44.jpg">Kolchak Tales: Ghost Stories</a> (2006)
 <li><a href="Moonstone45.jpg">Kolchak Tales: Night Stalker Annual</a> (2009)
 <li><a href="Moonstone46.jpg">Kolchak Tales: Night Stalker of the Living Dead</a> (2008)
-<li><a href="Moonstone47.jpg">Kolchak: the Night Stalke</a> (2002)
+<li><a href="Moonstone47.jpg">Kolchak: the Night Stalker</a> (2002)
 <li><a href="Moonstone48.jpg">Lady Action Special</a>(2009)
 <li><a href="Moonstone49.jpg">Lai Wan</a> (2006)
 <li><a href="Moonstone50.jpg">M.I.L.F. Magnet</a> (2009)
@@ -195,9 +198,9 @@ Titles
 <li><a href="Moonstone59.jpg">O. Henry's The Cisco Kid</a> (2004)
 <li><a href="Moonstone60.jpg">O. Henry's The Cisco Kid: Gunfire &amp; Brimstone</a> (2005)
 <li><a href="Moonstone61.jpg">Omega Paradox</a> (2011)
-<li><a href="Moonstone62.jpg">The Phantom</a> (2003)
-<li><a href="Moonstone63.jpg">The Phantom - Captain Action</a> (2010)
-<li><a href="Moonstone64.jpg">The Phantom Annual</a> (2007)
+<li><a href="Moonstone62.jpg">Phantom</a> (2003)
+<li><a href="Moonstone63.jpg">Phantom - Captain Action</a> (2010)
+<li><a href="Moonstone64.jpg">Phantom Annual</a> (2007)
 <li><a href="Moonstone65.jpg">Phases of the Moon</a> (2011)
 <li><a href="Moonstone66.jpg">Return of the Monsters: Black Bat vs. Dracula</a> (2011)
 <li><a href="Moonstone67.jpg">Return of the Monsters: Domino Lady vs. Mummy</a> (2011)
@@ -207,16 +210,16 @@ Titles
 <li><a href="Moonstone71.jpg">Robin Hood and the Minstrel</a> (2001)
 <li><a href="Moonstone72.jpg">Rotten</a> (2009)
 <li><a href="Moonstone73.jpg">Rotten / Zombies vs. Cheerleaders Flip Out</a> (2011)
-<li><a href="Moonstone74.jpg">The Saint</a> (2012)
-<li><a href="Moonstone75.jpg">The Saint: The Man Who Was Clever</a> (2012)
+<li><a href="Moonstone74.jpg">Saint</a> (2012)
+<li><a href="Moonstone75.jpg">Saint: The Man Who Was Clever</a> (2012)
 <li><a href="Moonstone76.jpg">Savage Beauty</a> (2011)
 <li><a href="Moonstone77.jpg">Sheena: Queen of the Jungle</a> (2014)
 <li><a href="Moonstone78.jpg">Sherlock Holmes &amp; Kolchak the Night Stalker</a> (2009)
 <li><a href="Moonstone79.jpg">Sherlock Holmes and the Clown Prince of London</a> (2001)
 <li><a href="Moonstone80.jpg">Sherlock Holmes Mysteries</a> (1997)
 <li><a href="Moonstone81.jpg">Spider</a> (2011)
-<li><a href="Moonstone82.jpg">The Spider and Domino Lady</a> (2011)
-<li><a href="Moonstone83.jpg">The Spider, Judgement Knight: The Chaos Maker</a> (2009)
+<li><a href="Moonstone82.jpg">Spider and Domino Lady</a> (2011)
+<li><a href="Moonstone83.jpg">Spider, Judgement Knight: The Chaos Maker</a> (2009)
 <li><a href="Moonstone84.jpg">That Man Flint</a> (2011)
 <li><a href="Moonstone85.jpg">Thor the Unkillable Thunder Christ</a> (2012)
 <li><a href="Moonstone86.jpg">Twilight Crusade: Succubus</a> (2008)
@@ -238,6 +241,7 @@ Titles
 <li><a href="Moonstone102.jpg">World of Darkness: Vampire the Masquerade Beckett</a> (2002)
 <li><a href="Moonstone103.jpg">World of Darkness: Vampire the Masquerade's Calebros</a> (2002)
 <li><a href="Moonstone104.jpg">Wyatt Earp: Dodge City</a> (2005)
+<li><a href="Moonstone110.jpg">Zeroids</a> (2007)
 <li><a href="Moonstone105.jpg">Zombie Proof</a> (2007)
 <li><a href="Moonstone106.jpg">Zombies vs Cheerleaders</a> (2010)
 <li><a href="Moonstone107.jpg">Zombies vs Cheerleaders Flips Out / Rotten Flips Out</a> (2011)
