--- a/Topps/Topps.html
+++ b/Topps/Topps.html
@@ -157,7 +157,7 @@ Titles
 <li><a href="Topps40.jpg">Marriage of Hercules and Xena  </a> (1998)
 <li><a href="Topps41.jpg">Mars Attacks   </a> (1994)
 <li><a href="Topps42.jpg">Mars Attacks Baseball Special  </a> (1996)
-<li><a href="Topps43.jpg">Mars Attacks Graphic Album [b] </a> (1994)
+<li><a href="Topps43.jpg">Mars Attacks Graphic Album </a> (1994)
 <li><a href="Topps44.jpg">Mars Attacks High School   </a> (1997)
 <li><a href="Topps45.jpg">Mars Attacks The Savage Dragon     </a> (1996)
 <li><a href="Topps46.jpg">Mary Shelley's Frankenstein    </a> (1994)
