--- a/Activision/Activision.html
+++ b/Activision/Activision.html
@@ -18,7 +18,13 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Activision1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Activision2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Activision3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Activision4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Activision5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../CallOfDuty/CallOfDuty.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Skylanders/Skylanders.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -38,10 +44,11 @@ Titles
 <li>Boxing (1980)
 <li><a href="../CallOfDuty/CallOfDuty.html">Call of Duty</a> (2003)
 <li>Call to Power series (1999)
-<li>Chopper Command (1982)
+<li><a href="Activision3.jpg">Chopper Command</a> (1982)
 <li>Dark Reign series (1997)
 <li>Deathtrack (1989)
 <li>Enduro (1982)
+<li><a href="Activision5.jpg">Guitar Hero</a> (1985)
 <li>Fishing Derby (1980)
 <li>Freeway (1981)
 <li>H.E.R.O. (1984)
@@ -51,18 +58,18 @@ Titles
 <li>Hunter (1991)
 <li>Ice Hockey (1981)
 <li>Interstate series (1997)
-<li>Kaboom! (1981)
+<li><a href="Activision2.jpg">Kaboom!</a> (1981)
 <li>Laser Blast (1981)
 <li>Little Computer People (1985)
 <li>MechWarrior series (1989)
 <li>Megamania (1982)
 <li>Oink! (1983)
-<li>Pitfall! series (1982)
+<li><a href="Activision4.jpg">Pitfall!</a> (1982)
 <li>Quake series (1997)
 <li>River Raid series (1982)
 <li>Shanghai series (1986)
 <li>SiN (1998)
-<li>Skiing (1980)
+<li><a href="Activision1.jpg">Skiing</a> (1980)
 <li><a href="../Skylanders/Skylanders.html">Skylanders</a> (2011)
 <li>Stampede (1981)
 <li>Star Trek series (1999)
