--- a/ChevalNoir/ChevalNoir.html
+++ b/ChevalNoir/ChevalNoir.html
@@ -2,16 +2,82 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Cheval Noir</title>
 </head>
 
 <body>
-<img src="ChevalNoir.jpg"> <br>
-50 issues from1989-1994 by Dark Horse<br>
-Cover: Dave Stevens
+<img src="ChevalNoir.jpg">
 <p>
-This elegant new anthology will feature the best work by the best cartoonists the world over! Phillipe Druillet's The Lone Sloane, Adele and the Beast by Jacques Tardi, Angel Fusion by Kato and Goto, and stories by a host of other renowned creators, including Schuiten and Peeters, Andreas, and Cossu.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChevalNoir50.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Cheval Noir (French translation of Black Horse) was a black-and-white anthology comic book published between 1989 and 1994 by Dark Horse Comics. First edited by Dark Horse founder Mike Richardson, Cheval Noir aimed to showcase the best work by international creators to the English-speaking audience.
+</p><p>
+During its 50 issue run, Cheval Noir was published in a variety of formats ranging from the standard 32-pages to giant-sized 72-page issues. The first 23 issues were edited by Mike Richardson, then the role was taken over by Barbara Kesel and later by Anina Bennett and Jennie Bricker.
+</p><p>
+Besides many stand-alone short comics, the anthology featured chapters from Jacques Tardi's The Extraordinary Adventures of Adèle Blanc-Sec, David Lynch's The Angriest Dog in the World, an adaptation of Joe Haldeman's The Forever War by Marvano, Andreas' Rork, Masashi Tanaka's Demon, François Schuiten and Benoît Peeters' Cities of the Fantastic, Jean-Michel Charlier and Moebius' Blueberry. 
 </p>
 
 </body>
