--- a/Nexus/Nexus.html
+++ b/Nexus/Nexus.html
@@ -8,30 +8,8 @@
 </head>
 
 <body>
-<img src="Nexus001.jpg"> <br>
-Series: 1981<br>
-Publisher: Capital, First, Dark Horse<br>
-Written by Mike Baron<br>
-Illustrations by Steve Rude<br>
+<img src="Nexus001.jpg">
 <p>
-Nexus is an American comic book series created by writer Mike Baron and penciler Steve Rude in 1981. The series is a combination of the superhero and science fiction genres, set 500 years in the future.
-</p><p>
-The lead character, Horatio Valdemar Hellpop, received his Nexus powers from an alien entity called the Merk. As payment, the Merk required Nexus to seek out and kill a certain quantity of human mass murderers per "cycle". When the Merk selected a target, Nexus would receive strong headaches and maddeningly anguishing dreams (whose extremely intense episodes caused physical injuries to Hellpop's body that emulated the dream violence) of his target's victims until he did his duty. Horatio was reluctant to act as the Merk's tool, but continued seeking out mass murderers to maintain his power and his sanity so that he could defend his homeworld, a lunar refuge named Ylum (a shortening of the word "asylum", thus pronounced "eye-lum").
-</p><p>
-The series debuted as a three-issue black-and-white limited series (the third of which featured a 33 RPM flexi disc with music and dialogue from the issue), followed by an ongoing full-color series which lasted 80 issues. The black-and-white issues and the first six color issues were published by Capital Comics; after Capital's demise, First Comics took over publication (issue #7).
-</p><p>
-On the creation of the series, Baron noted that they had originally pitched a series called Encyclopaedias to Capital Comics, but the company rejected this, saying they were looking for a superhero title. Over a drink at a restaurant, Baron outlined his ideas for Nexus to Rude:
-</p><p>
-Nexus was entirely Baron's idea. He even came up with the lightning bolt for the costume. All that we needed then was a name... a few weeks passed. Baron calls, and, without preamble, just says "Nexus." We finally had our name."
-</p><p>
-In addition to the ongoing series, First reprinted the original miniseries as a graphic novel and later reprinted the first two years of the ongoing title in the Nexus Legends series. The ongoing series was also supplemented by The Next Nexus, a four-issue miniseries that followed Nexus #52. Following the conclusion of the ongoing series with #80 (May 1991), seven miniseries and two one-shot comics were published by Dark Horse Comics. The last of these miniseries was printed in black and white as a cost-cutting measure; low sales led to the series being discontinued. Although each miniseries had its own issue numbering, Baron and Rude added a sequential number to each, as explained in the back of the first issue of Nexus: Executioner's Song:
-</p><p>
-The current issue number was figured by continuing First Publishing's numbering, which ended at volume 2, #80. Adding Nexus: The Origin, Nexus: Alien Justice #1-3, and Nexus: The Wages of Sin #1-4 brings it up to 88 — making "Dark Side of the Moon" #89.
-</p><p>
-The sequential numbering system excluded Nexus: Liberator (which neither Rude nor Baron worked on), and crossover specials with Magnus: Robot Fighter and Madman.
-</p><p>
-Baron and Rude discussed plans to either revive the series or release a movie, possibly in animated form. (A brief animated test clip was shown at comics conventions). From July 2007 through July 2009 they published the miniseries Space Opera, which culminated in a double-size issue #101/102.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -57,7 +35,30 @@ Baron and Rude discussed plans to either revive the series or release a movie, p
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
+</p><p>
+Series: 1981<br>
+Publisher: <a href="../CapitalComics/CapitalComics.html">Capital</a>, <a href="../FirstComics/FirstComics.html">First</a>, <a href="../DarkHorse/DarkHorse.html">Dark Horse</a><br>
+Written by Mike Baron<br>
+Illustrations by <a href="../SteveRude/SteveRude.html">Steve Rude</a>
+<p>
+Nexus is an American comic book series created by writer Mike Baron and penciler Steve Rude in 1981. The series is a combination of the superhero and science fiction genres, set 500 years in the future.
+</p><p>
+The lead character, Horatio Valdemar Hellpop, received his Nexus powers from an alien entity called the Merk. As payment, the Merk required Nexus to seek out and kill a certain quantity of human mass murderers per "cycle". When the Merk selected a target, Nexus would receive strong headaches and maddeningly anguishing dreams (whose extremely intense episodes caused physical injuries to Hellpop's body that emulated the dream violence) of his target's victims until he did his duty. Horatio was reluctant to act as the Merk's tool, but continued seeking out mass murderers to maintain his power and his sanity so that he could defend his homeworld, a lunar refuge named Ylum (a shortening of the word "asylum", thus pronounced "eye-lum").
+</p><p>
+The series debuted as a three-issue black-and-white limited series (the third of which featured a 33 RPM flexi disc with music and dialogue from the issue), followed by an ongoing full-color series which lasted 80 issues. The black-and-white issues and the first six color issues were published by Capital Comics; after Capital's demise, First Comics took over publication (issue #7).
+</p><p>
+On the creation of the series, Baron noted that they had originally pitched a series called Encyclopaedias to Capital Comics, but the company rejected this, saying they were looking for a superhero title. Over a drink at a restaurant, Baron outlined his ideas for Nexus to Rude:
+</p><p>
+Nexus was entirely Baron's idea. He even came up with the lightning bolt for the costume. All that we needed then was a name... a few weeks passed. Baron calls, and, without preamble, just says "Nexus." We finally had our name."
+</p><p>
+In addition to the ongoing series, First reprinted the original miniseries as a graphic novel and later reprinted the first two years of the ongoing title in the Nexus Legends series. The ongoing series was also supplemented by The Next Nexus, a four-issue miniseries that followed Nexus #52. Following the conclusion of the ongoing series with #80 (May 1991), seven miniseries and two one-shot comics were published by Dark Horse Comics. The last of these miniseries was printed in black and white as a cost-cutting measure; low sales led to the series being discontinued. Although each miniseries had its own issue numbering, Baron and Rude added a sequential number to each, as explained in the back of the first issue of Nexus: Executioner's Song:
+</p><p>
+The current issue number was figured by continuing First Publishing's numbering, which ended at volume 2, #80. Adding Nexus: The Origin, Nexus: Alien Justice #1-3, and Nexus: The Wages of Sin #1-4 brings it up to 88 — making "Dark Side of the Moon" #89.
+</p><p>
+The sequential numbering system excluded Nexus: Liberator (which neither Rude nor Baron worked on), and crossover specials with Magnus: Robot Fighter and Madman.
+</p><p>
+Baron and Rude discussed plans to either revive the series or release a movie, possibly in animated form. (A brief animated test clip was shown at comics conventions). From July 2007 through July 2009 they published the miniseries Space Opera, which culminated in a double-size issue #101/102.
+</p><p>
 </p><p>
 The creators' canonical publication list includes 105 issues:
 </p><p>
