--- a/Sabrina/Sabrina.html
+++ b/Sabrina/Sabrina.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Sabrina the Teenage Witch</title>
+<title>Sabrina</title>
 </head>
 
 <body>
@@ -32,6 +32,11 @@
 <div class="mySlides" style="text-align: center;"><img src="Sabrina11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Sabrina12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Sabrina13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Sabrina14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Sabrina15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Sabrina16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Sabrina17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Sabrina18.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -41,9 +46,9 @@ Sabrina the Teenage Witch is a comic book series published by Archie Comics abou
 </p><p>
 Meet Sabrina, a sexy teen witch who lives a typical teen-age life -- except that her job is to hex her fellow teens. She introduces us to the rules of witchery: witches can't cry, can't sink when they're in the water, and if they ever fall in love, they lose their powers. First appearance of Sabrina, her cat Salem, and Della the Head Witch.
 </p><p>
-Much of this early version of Sabrina appears to be based on the play and film <a href="Sabrina14.jpg">"Bell, Book and Candle"</a> starring Kim Novak. The rule about witches losing their powers if they fall in love and the inability of witches to cry (both of which were dropped in subsequent versions of Sabrina) were used in "Bell, Book and Candle," and Sabrina's cat Salem is similar to Pyewacket, the witch's familiar in "Bell, Book and Candle."
+Much of this early version of Sabrina appears to be based on the play and film <a href="SabrinaBell.jpg">"Bell, Book and Candle"</a> (1958) starring Kim Novak. The rule about witches losing their powers if they fall in love and the inability of witches to cry (both of which were dropped in subsequent versions of Sabrina) were used in "Bell, Book and Candle," and Sabrina's cat Salem is similar to the witch's familiar Pyewacket.
 </p><p>
-Storylines of the character at elementary-school-age also appear under the title "Sabrina -- That Cute Little Witch" in almost all of the Little Archie comics.
+Bell, Book and Candle was also the inspiration for Bewitched, the American fantasy sitcom television series, originally broadcast for eight seasons on ABC from September 17, 1964, to March 25, 1972. It is about a witch who marries an ordinary mortal man and vows to lead the life of a typical suburban housewife. 
 </p><p>
 The series' premise is that Sabrina, a "half-witch" – her mother is an ordinary human, or "mortal" as witches refer to them, while her father is a warlock – lives with her two aunts, Hilda and Zelda Spellman, both witches themselves, in the fictional town of Greendale, which is located somewhere near Riverdale, the home of Archie Andrews. Also living with the three women as the family pet is Salem Saberhagen, a witch who has been turned into a cat as punishment for world domination attempts. Sabrina's primary romantic interest is her mortal boyfriend Harvey Kinkle who, like nearly all the other mortals in Sabrina's world, is unaware his girlfriend is a witch.
 </p><p>
