--- a/index.html
+++ b/index.html
@@ -56136,7 +56136,7 @@
 <tr>
 <td>Matrix</td>
 <td>1999</td>
-<td>WB</td>
+<td>Warner Bros</td>
 <td><a href="Matrix/Matrix.html">Details</a> </td>
 </tr>
 
@@ -64509,10 +64509,10 @@
 </tr>
 
 <tr>
-<td>Pep</td>
+<td>Pep Comics</td>
 <td>1940</td>
 <td>Archie</td>
-<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+<td><a href="Pep/Pep.html">Details</a></td>
 </tr>
 
 <tr>
@@ -80442,6 +80442,13 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Temerson Comics</td>
+<td>1940</td>
+<td>Publisher</td>
+<td><a href="Temerson/Temerson.html">Details</a></td>
 </tr>
 
 <tr>
