--- a/HarveyComics/HarveyComics.html
+++ b/HarveyComics/HarveyComics.html
@@ -471,7 +471,7 @@ Titles
 <li><a href="HarveyComics140.jpg">Here's How America's Cartoonists Help to Sell U. S. Savings Bonds!     </a> (1950)
 <li><a href="HarveyComics141.jpg">Hi-School Romance  </a> (1949)
 <li><a href="HarveyComics142.jpg">Hi-School Romance Datebook     </a> (1962)
-<li><a href="HarveyComics143.jpg">Horace &amp; Dotty Dripple     </a> (1952)
+<li><a href="HarveyComics143.jpg">Horace And Dotty Dripple     </a> (1952)
 <li><a href="HarveyComics144.jpg">Hot Stuff  </a> (1991)
 <li><a href="HarveyComics145.jpg">Hot Stuff Big Book     </a> (1992)
 <li><a href="HarveyComics146.jpg">Hot Stuff Creepy Caves     </a> (1974)
