--- a/CalvinAndHobbes/CalvinAndHobbes.html
+++ b/CalvinAndHobbes/CalvinAndHobbes.html
@@ -26,6 +26,8 @@
 <div class="mySlides" style="text-align: center;"><img src="CalvinAndHobbes6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CalvinAndHobbes7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CalvinAndHobbes8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CalvinAndHobbes9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CalvinAndHobbes10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
