--- a/Harvey/Harvey.html
+++ b/Harvey/Harvey.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-Harvey<br>
-<img src="Harvey.jpg"> <br>
+<img src="Harvey.jpg"> 
+<p>
 Series: 6 issues 1970<br>
 Publisher: Marvel<br>
 Illustrations by Stan Goldberg<br>
