--- a/ModestyBlaze/ModestyBlaze.html
+++ b/ModestyBlaze/ModestyBlaze.html
@@ -23,6 +23,16 @@
 <div class="mySlides" style="text-align: center;"><img src="ModestyBlaze3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ModestyBlaze4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ModestyBlaze5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModestyBlaze15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
