--- a/index.html
+++ b/index.html
@@ -24446,6 +24446,13 @@
 </tr>
 
 <tr>
+<td>Dan Barry</td>
+<td>1923</td>
+<td>Creator</td>
+<td><a href="DanBarry/DanBarry.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dan Dare Omnibus</td>
 <td>2009</td>
 <td>Dynamite</td>
