--- a/BrendanMcCarthy/BrendanMcCarthy.html
+++ b/BrendanMcCarthy/BrendanMcCarthy.html
@@ -32,6 +32,10 @@
 <div class="mySlides" style="text-align: center;"><img src="McCarthy12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="McCarthy13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="McCarthy14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="McCarthy15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="McCarthy16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="McCarthy17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="McCarthy18.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
