--- a/DanBarry/DanBarry.html
+++ b/DanBarry/DanBarry.html
@@ -26,6 +26,8 @@
 <div class="mySlides" style="text-align: center;"><img src="DanBarry6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanBarry7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanBarry8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanBarry9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanBarry10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
