--- a/index.html
+++ b/index.html
@@ -24502,6 +24502,13 @@
 </tr>
 
 <tr>
+<td>Dan Zettwoch</td>
+<td>1985</td>
+<td>Creator</td>
+<td><a href="DanZettwoch/DanZettwoch.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dance Of Lifey Death</td>
 <td>1994</td>
 <td>Dark Horse</td>
@@ -30487,6 +30494,13 @@
 <td>1987</td>
 <td>Starhead</td>
 <td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ed Emberley</td>
+<td>1931</td>
+<td>Creator</td>
+<td><a href="EdEmberley/EdEmberley.html">Details</a></td>
 </tr>
 
 <tr>
