Simon and Shuster index

--- a/SimonAndSchuster/SimonAndSchuster.html
+++ b/SimonAndSchuster/SimonAndSchuster.html
@@ -212,7 +212,7 @@ Titles
 <li><a href="SimonSchuster46.jpg">I Go Pogo</a>  	1952
 <li><a href="SimonSchuster47.jpg">I Paint What I See</a> 	1971
 <li><a href="SimonSchuster48.jpg">Impollutable Pogo</a>  	1970
-<li><a href="SimonSchuster49.jpg">The Incompleat Pogo</a>  	1953
+<li><a href="SimonSchuster49.jpg">Incompleat Pogo</a>  	1953
 <li><a href="SimonSchuster50.jpg">Incredible Hulk</a>  	1978
 <li><a href="SimonSchuster51.jpg">Instant Pogo</a>  	1962
 <li><a href="SimonSchuster52.jpg">Isaac Mizrahi Presents</a>  	1997
@@ -258,7 +258,7 @@ Titles
 <li><a href="SimonSchuster92.jpg">Pogo Sunday Parade</a>  	1958
 <li><a href="SimonSchuster93.jpg">Pogo's Bats and the Belles Free</a>  	1976
 <li><a href="SimonSchuster94.jpg">Pogo's Body Politic</a>  	1976
-<li><a href="SimonSchuster95.jpg">Pogo's Double Sundaev 	1978
+<li><a href="SimonSchuster95.jpg">Pogo's Double Sundae</a> 	1978
 <li><a href="SimonSchuster96.jpg">Pogo's Sunday Punch</a>  	1957
 <li><a href="SimonSchuster97.jpg">Pogo's Will Be That Was</a>  	1979
 <li><a href="SimonSchuster98.jpg">Pogo: Prisoner of Love</a>  	1969
@@ -269,7 +269,7 @@ Titles
 <li><a href="SimonSchuster103.jpg">R. Crumb's Head Comix: Twenty Years Later</a>  	1988
 <li><a href="SimonSchuster104.jpg">Raymond Chandler's Philip Marlowe: The Little Sister</a> 	1997
 <li><a href="SimonSchuster105.jpg">Red Foley's Cartoon History of Baseball</a>  	1992
-<li><a href="SimonSchuster106.jpg">The Return of Pogo</a>  	1965
+<li><a href="SimonSchuster106.jpg">Return of Pogo</a>  	1965
 <li><a href="SimonSchuster107.jpg">Ripley's 35th Anniversary Believe It Or Not!</a>  	1954
 <li><a href="SimonSchuster108.jpg">Ripley's Believe It or Not</a>  	1929
 <li><a href="SimonSchuster109.jpg">Ripley's Believe It or Not Omnibus</a>  	1934
