--- a/DanielClowes/DanielClowes.html
+++ b/DanielClowes/DanielClowes.html
@@ -44,6 +44,7 @@
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes24.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes26.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -70,6 +71,7 @@ Graphic novels
 <li><a href="DanielClowes03.jpg">The Death-Ray</a> (2011)
 <li><a href="DanielClowes19.jpg">Patience</a> (2016)
 <li><a href="DanielClowes24.jpg">Daniel Clowes Reader</a> (2013)
+<li><a href="DanielClowes26.jpg">Uggly Family</a> (as Stosh Gillespie 1988)
 </ul>
 Anthologies
 <ul>
