--- a/index.html
+++ b/index.html
@@ -35402,6 +35402,13 @@
 </tr>
 
 <tr>
+<td>Fletcher Hanks</td>
+<td>1889</td>
+<td>Creator</td>
+<td><a href="FletcherHanks/FletcherHanks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Flex Mentallo</td>
 <td>1996</td>
 <td>DC</td>
@@ -46237,6 +46244,13 @@
 </tr>
 
 <tr>
+<td>Jack Kamen</td>
+<td>1920</td>
+<td>Creator</td>
+<td><a href="JackKamen/JackKamen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jack Kirby</td>
 <td>1917</td>
 <td>Creator</td>
@@ -47788,6 +47802,13 @@
 <td>1991</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Johnny Craig</td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="JohnnyCraig/JohnnyCraig.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71452,6 +71473,13 @@
 <td>1901</td>
 <td>Creator</td>
 <td><a href="RoyCrane/RoyCrane.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Roy Krenkel</td>
+<td>1918</td>
+<td>Creator</td>
+<td><a href="RoyKrenkel/RoyKrenkel.html">Details</a></td>
 </tr>
 
 <tr>
