--- a/index.html
+++ b/index.html
@@ -52151,6 +52151,13 @@
 </tr>
 
 <tr>
+<td>Liam Sharp</td>
+<td>1968</td>
+<td>Creator</td>
+<td><a href="LiamSharp/LiamSharp.html">Details</td>
+</tr>
+
+<tr>
 <td>Libby Ellis</td>
 <td>1987</td>
 <td>Malibu</td>
@@ -61833,6 +61840,13 @@
 <td>1920</td>
 <td>Creator</td>
 <td><a href="NickCardy/NickCardy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nick Derington</td>
+<td>1985?</td>
+<td>Creator</td>
+<td><a href="NickDerington/NickDerington.html">Details</a></td>
 </tr>
 
 <tr>
