--- a/index.html
+++ b/index.html
@@ -50296,6 +50296,13 @@
 </tr>
 
 <tr>
+<td>Klaus Janson</td>
+<td>1952</td>
+<td>Creator</td>
+<td><a href="KlausJanson/KlausJanson.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Klaus Nordling</td>
 <td>1910</td>
 <td>Creator</td>
